--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>SIMPLE MAP API</title>
+    <title>CSUN MAP QUIZ</title>
     <script src="script.js" defer></script>
     <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUROrDKTesgA_S7Y7z7ei5JAH2V1EL_nA&libraries=geometry&callback=initMap" type="text/javascript"></script> -->
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAUROrDKTesgA_S7Y7z7ei5JAH2V1EL_nA&libraries=geometry&callback=initMap" async defer></script>
@@ -11,12 +11,14 @@
 </head>
 
 <body>
-    <H1>GOOGLE MAP API PROJECT</H1>
-    <H2 id="test">Do you know CSUN?</H2>
-    <section class="question-container">
-        <p id="quiz">Map Quiz</p>
-        <button id="start-btn">Start Quiz</button>
+    <h1>GOOGLE MAP API PROJECT</h1>
+    <h2>Map Quiz</h2>
+    <h3 id="test">This quiz is to check whether you know CSUN Map</h3>
+    <hr>
+    <aside id="instruction">**Please double click on the map area to answer the questions</aside>
 
+    <section class="question-container">
+        <!-- <button id="start-btn">Start Quiz</button> -->
     </section>
 
     <div id="map"></div>
